--- a/day-slot.html
+++ b/day-slot.html
@@ -133,7 +133,7 @@
 					</div>
 					
 					<div class="half-cashback__button-wrapper">
-						<button class="half-cashback__button-details">Подробнее</button>
+						<button class="half-cashback__button-details" id="day-slot-button">Подробнее</button>
 					</div>
 				</div>
 			</div>
