--- a/everyweek-cashback.html
+++ b/everyweek-cashback.html
@@ -108,7 +108,7 @@
 				</div>
 
 				<div class="everyweek-cashback__condition">
-					<p class="everyweek-cashback__condition-text">Участие в акции могут принять участники достигшие <span class="everyweek-cashback__second-level">2-го уровня</span> <span class="everyweek-cashback__hint">?</span></p>
+					<p class="everyweek-cashback__condition-text">Участие в акции могут принять участники достигшие <span class="everyweek-cashback__second-level">2-го уровня</span> <a href="levels.html" class="everyweek-cashback__hint">?</a></p>
 				</div>
 			</div>
 		</section>
@@ -201,6 +201,100 @@
 				</div>
 			</section>
 		</div>
+
+		<section class="games">
+			<div class="games__wrapper">
+
+				<div class="games__list-wrapper">
+					<div class="games__column">
+						<h2 class="games__header">Игры</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="#">NetEnt</a></li>
+							<li class="games__item"><a href="#">Amatic</a></li>
+							<li class="games__item"><a href="#">Ezugi</a></li>
+							<li class="games__item"><a href="#">Softswiss</a></li>
+							<li class="games__item"><a href="#">Лобби</a></li>
+							<li class="games__item"><a href="#">Слоты</a></li>
+							<li class="games__item"><a href="#">Джекпот</a></li>
+							<li class="games__item"><a href="#">Настольные</a></li>
+							<li class="games__item"><a href="#">Live диллер</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">Акции</h2>
+						<ul class="games__list">
+							<li class="games__item"><a href="bonus.html">Приветственный бонус</a></li>
+							<li class="games__item"><a href="#">Reload бонус</a></li>
+							<li class="games__item"><a href="everyweek-cashback.html">Кэшбек</a></li>
+							<li class="games__item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
+							<li class="games__item"><a href="day-slot.html">Слот дня во вторник</a></li>
+							<li class="games__item"><a href="free-spins.html">Фриспины в четверг</a></li>
+							<li class="games__item"><a href="tournament.html">Darkslot турнир</a></li>
+							<li class="games__item"><a href="levels.html">Уровни игроков</a></li>
+						</ul>
+					</div>
+
+					<div class="games__column">
+						<h2 class="games__header">О нас</h2>
+						<ul class="games__list">
+							<li class="games__item games__item--policy">Политика конфиденциальности</li>
+							<li class="games__item games__item--rules">Положения и условия</li>
+							<li class="games__item games__item--support">Поддержка</li>
+							<li class="games__item"><a href="partners.html">Партнерам</a></li>
+							<li class="games__item"><a href="about.html">О Darkslot</a></li>
+							<li class="games__item"><a href="blog.html">Блог</a></li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="games__social">
+					<span class="games__text">Следите за нами</span>
+					<div class="games__social-list">
+						<a href="#" target="blank"><img src="img/social-icons/fb-big.png" alt=""></a>
+						<a href="#" target="blank"><img src="img/social-icons/tw-big.png" alt=""></a>
+						<a href="#" target="blank"><img src="img/social-icons/yt-big.png" alt=""></a>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="partners">
+			<div class="partners__wrapper">
+				<div class="partners__images">
+					<img src="img/partners/1_visa.jpg" alt="visa">
+					<img src="img/partners/2_mastercard.jpg" alt="mastercard">
+					<img src="img/partners/3_skrill.jpg" alt="skrill">
+					<img src="img/partners/4_netever.jpg" alt="netever">
+					<img src="img/partners/5_paysafecard.jpg" alt="pay safe card">
+					<img src="img/partners/6_trustly.svg" alt="trustly">
+					<img src="img/partners/7_zimpler.svg" alt="zimpler">
+					<img src="img/partners/8_responsivegaming.jpg" alt="responsive gaming">
+					<img src="img/partners/9_itechlab.jpg" alt="itech lab">
+					<img src="img/partners/10_safesecure.jpg" alt="safe secure">
+					<img src="img/partners/11_sealofapproval.png" alt="seal of approval">
+					<img src="img/partners/12_askgamblers.png" alt="ask gamblers">
+					<img src="img/partners/13_softswiss.jpg" alt="softswiss">
+					<img src="img/partners/14_netent.svg" alt="netent">
+					<img src="img/partners/15_amatic.svg" alt="amatic">
+					<img src="img/partners/16_ezugi.svg" alt="ezugi">
+					<img src="img/partners/17_bitcoin.png" alt="bitcoin">
+					<img src="img/partners/18.jpg" alt="18+">
+				</div>
+
+				<p class="partners__text">Вебсайт Darkslot.com принадлежит компании Direx N.V., зарегистрированной и созданной в соответствии с законодательством Кюрасао и ее дочерним предприятием Direx Limited, зарегистрированными в Республике Кипр по адресу Stasinou 1, MITSI Building 1, 1st Floor, Flat/Office 4, Plateia Eleftherias, Nicosia. Деятельность Direx N.V. лицензирована и попадает под регулирование Antilephone N.V. Регистрационный номер Direx N.V.: 131879, адрес регистрации: E-Commerce Park Vredenberg, Curacao</p>
+			</div>
+		</section>
+
+		<footer class="footer">
+			<div class="footer__wrapper">
+				<div class="footer__copyright"></div>
+				<div class="footer__development">
+					<span class="footer__developer">Разработка сайта: </span> 
+					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
+				</div>
+			</div>
+		</footer>
 
 		<div class="fixed-bar">
 			<div class="fixed-bar__wrapper">
