--- a/free-spins.html
+++ b/free-spins.html
@@ -97,7 +97,7 @@
 					<p class="free-spins__underheader-text">Внесите депозит от 20$ и получите бесплатные вращаения в игре Jack and the Beanstalk. Проведите четверг с DarkSlot и насладитесь атмосферой нашего казино. Так же не забывайте,  что для каждого игрока действует <a href="reload-bonus.html">Reload bonus</a>, который можно получить один раз в любой день недели.</p>
 				</div>
 
-				<a href="#" class="free-spins__button">Правила и условия</a>
+				<button class="free-spins__button" id="free-spins-button">Правила и условия</button>
 
 				<div class="free-spins__coin-image-wrapper">
 					<img src="img/free-spins-coin.png" alt="free spins" class="free-spins__coin-image">
