--- a/partners.html
+++ b/partners.html
@@ -161,7 +161,7 @@
 				</div>
 
 				<div class="incomes__button-wrapper">
-					<button class="incomes__button">Стать партнером</button>
+					<button class="incomes__button" id="partners-button">Стать партнером</button>
 				</div>
 
 			</div>
