--- a/tournament.html
+++ b/tournament.html
@@ -95,7 +95,7 @@
 					<div class="tournament__text-wrapper">
 						<h4 class="tournament__text-header">Правила:</h4>
 						<p class="tournament__text">Турнир проводится по пятницам с 01:00 до 23:00 (МСК). В турнире принимают участие все клиенты Казино, которые сделали депозит в пятницу после 01:00(МСК) В турнире участвуют все игры из разделов «Слоты». Победители турнира определяются автоматически, исходя из самого крупного значения среднего выигрыша за время турнира.</p>
-						<a href="#" class="tournament__rules">Полные правила</a>
+						<button class="tournament__rules" id="tournament-button">Полные правила</bytton>
 					</div>
 
 					<div class="conditions conditions--tournament">
